--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     Сайт студента Рыжова Кирилла Алексеевича гр.3319/2
+    <a href='21oct24.html'>21 октября 2024</a>
 </body>
 </html>
