--- a/25oct24.html
+++ b/25oct24.html
@@ -21,8 +21,11 @@
         myButton3.onclick = myFunction2
         function myFunction2(){
             document.body.style.backgroundColor = 'pink';
-
         }
     </script>
 </body>
+<body>
+    <h1>Карта</h1>
+    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ab722cb04036c2dfa278a691ff4bdac3c3abe08832137e1e402ef5a7f4f8e3412&amp;width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
+</body>    
 </html>
