--- a/25oct24.html
+++ b/25oct24.html
@@ -8,7 +8,7 @@
 <body>
     <script>
         let myButton2 = document.createElement('button');
-        myButton2.innerText = 'черный фон'
+        myButton2.innerText = 'Черный фон'
         document.body.append(myButton2)
         myButton2.onclick = myFunction1
         function myFunction1(){
@@ -16,7 +16,7 @@
 
         }
         let myButton3 = document.createElement('button');
-        myButton3.innerText = 'белый фон'
+        myButton3.innerText = 'Розовый фон'
         document.body.append(myButton3)
         myButton3.onclick = myFunction2
         function myFunction2(){
