--- a/29oct24.html
+++ b/29oct24.html
@@ -10,7 +10,7 @@
             width: 1080px;
             height: 800px;
             border: solid 1px;
-            background-image: url(22_full.jpg);
+            background-image: url(img/22_full.jpg);
             background-size: cover;
         }
     </style>
