--- a/31oct24.html
+++ b/31oct24.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="kazino.png" id="rul">
+    <img src="img/kazino.png" id="rul">
     <button onclick="stopRul()">СТОП</button>
     <button onclick="startRul()">СТАРТ</button>
     <script>
