--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <a href='29oct24.html'>29 октября 2024</a>
     <a href='30oct25.html'>30 октября 2024</a>
     <a href='31oct24.html'>31 октября 2024</a>
+    <a href='01nov24.html'>1 ноября 2024</a>
 </body>
 </html>
