--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <a href='30oct25.html'>30 октября 2024</a>
     <a href='31oct24.html'>31 октября 2024</a>
     <a href='01nov24.html'>1 ноября 2024</a>
+    <a href='02nov24.html'>2 ноября 2024</a>
 </body>
 </html>
